package ucf.assignment;
/*
 *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  Copyright 2021 Erica Joseph
 */
import java.time.LocalDate;

public class toDoListModel {
/*
    private String description;
    private LocalDate date;



    get date()
        return date

    set date()
        return current date

   toDoListModel(date, description)
        grab the date and set it in model
        grabe the description and set it in model

    @Override
    toString to declare output
        return printing description and date

*/
}
